Começo das minhas mudanças

--- a/Pet-Life_2/index.html
+++ b/Pet-Life_2/index.html
@@ -85,26 +85,10 @@
             <p>Bibliografia</p>
         </div>
         
-        <div class="img-bibliografy">
-            <div id="lupa-1">
-                <img src="./images-inicio/Figure lupa.png" alt="">
-                <p>Site sobre alimentação excencial dos pets</p>
-            </div>
-            <!-- <div>
-                <img src="./images-inicio/Figure- cam.png" alt="">
-            </div>
+        <div class="imgs-bibliografy">
             <div>
-                <img src="./images-inicio/Figure- cam.png" alt="">
+              <img src="./images-inicio/Figure lupa.png"/>
             </div>
-            <div>
-                <img src="./images-inicio/Figure- cam.png" alt="">
-            </div>
-            <div>
-                <img src="./images-inicio/Figure lupa.png" alt="">
-            </div>
-            <div>
-                <img src="./images-inicio/Figure lupa.png" alt="">
-            </div> -->
         </div>
     </section>
 </body>
