--- a/Pet-Life_2/index.html
+++ b/Pet-Life_2/index.html
@@ -81,15 +81,29 @@
     </section>
     
     <section>
-        <div class="bibliografy-general">
-            <p>Bibliografia</p>
-        </div>
-        
-        <div class="imgs-bibliografy">
-            <div>
+      <div class="bibliografy-general">
+          <p>Bibliografia</p>
+      </div>
+
+      <div class="imgs-bibliografy-container">
+        <a class="imgs-bibliografy" href="https://dicaspetz.com.br/cachorros/intoxicacao-alimentar-em-cachorros-saiba-como-agir/">
               <img src="./images-inicio/Figure lupa.png"/>
-            </div>
-        </div>
-    </section>
+              <div class="bibliografy-separator"></div>
+              <p>Site 1 sobre alimentação exencial dos pets</p>
+        </a>
+
+        <a class="imgs-bibliografy" href="https://www.youtube.com/watch?v=m0Csd3ufLGo">
+            <img src="./images-inicio/Figure- cam.png"/>
+            <div class="bibliografy-separator"></div>
+            <p>Video sobre alimentação dos pets</p>
+        </a>
+
+        <a class="imgs-bibliografy" href="https://www.apipapiaui.org/post/festas-perigo-de-intoxica%C3%A7%C3%A3o-alimentar-para-animais">
+          <img src="./images-inicio/Figure lupa.png"/>
+          <div class="bibliografy-separator"></div>
+          <p>Site 2 sobre alimentação exencial dos pets</p>
+        </a>
+      </div>
+  </section>
 </body>
 </html>
